--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %>*<br />
+    <%= f.label :username %>*<br />
     <%= f.text_field :name, placeholder: "Your name" %>
   </div>
   <div class="field">
@@ -21,10 +21,10 @@
   </div>
   <div class="field">
     <%= f.label :password %>*<br />
-    <%= f.password_field :password_digest, placeholder: "A-Z/0-9 characters please" %>
+    <%= f.password_field :password, placeholder: "Password" %>
   </div>
   <div class="field">
-    <%= f.label :Confirm_password %>*<br />
+    <%= f.label :confirm_password %>*<br />
     <%= f.password_field :password_confirmation, placeholder: "Confirm your password" %>
   </div>
 
@@ -34,7 +34,7 @@
     <%= f.label :bio %><br />
     <%= f.text_area :bio, placeholder: "A little about you.." %>
   </div>
-  
+
   <div class="field about">
     <%= f.label :profile_picture %><br />
     <%= f.text_field :profile_picture %>
