--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <b>Player1:</b>
-  <%= @game.player1_id %>
+  <%= current_user.name %>
 </p>
 
 <p>
@@ -24,6 +24,19 @@
   <b>Draw:</b>
   <%= @game.draw %>
 </p>
+
+<div class="game_wrap" id="game_wrap">
+<div class="square" id="sq1"><%= link_to "X", games_path, method: :update%></div>
+<div class="square" id="sq2"> </div>
+<div class="square" id="sq3"> </div>
+<div class="square" id="sq4"> </div>
+<div class="square" id="sq5"> </div>
+<div class="square" id="sq6"> </div>
+<div class="square" id="sq7"> </div>
+<div class="square" id="sq8"> </div>
+<div class="square" id="sq9"> </div>
+</div>
+
 
 
 <%= link_to 'Edit', edit_game_path(@game) %> |
