--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,6 +2,7 @@
 
 <table>
   <tr>
+    <th>Game Number</th>
     <th>Player1</th>
     <th>Player2</th>
     <th>Winner</th>
@@ -14,6 +15,7 @@
 
 <% @games.each do |game| %>
   <tr>
+    <td><%= game.id %></td>
     <td><%= game.player1_id %></td>
     <td><%= game.player2_id %></td>
     <td><%= game.winner %></td>
@@ -29,3 +31,4 @@
 <br />
 
 <%= link_to 'New Game', new_game_path %>
+<%= link_to 'Users', users_path %>
