--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <b>Player1:</b>
-  <%= @current_user.name %>
+  <%= current_user.name %>
 </p>
 
 <p>
@@ -20,29 +20,18 @@
   <%= @game.loser %>
 </p>
 
-<!-- <div class="game_wrap" id="game_wrap">
 
-<%#= link_to (games_path), method: :update do %><i class="fa fa-square-o square" id="sq1"></i><%#end%>
-<div class="square" id="sq2"> </div>
-<div class="square" id="sq3"> </div>
-<div class="square" id="sq4"> </div>
-<div class="square" id="sq5"> </div>
-<div class="square" id="sq6"> </div>
-<div class="square" id="sq7"> </div>
-<div class="square" id="sq8"> </div>
-<div class="square" id="sq9"> </div>
-</div> -->
 
 <div class="game_wrap" id="game_wrap">
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq1"></i><%end%>
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq2"></i><%end%>
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq3"></i><%end%>
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq4"></i><%end%>
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq5"></i><%end%>
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq6"></i><%end%>
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq7"></i><%end%>
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq8"></i><%end%>
-<%= link_to (games_path), method: :update do %><i class="fa fa-square-o square fa-5x" id="sq9"></i><%end%>
+<%= link_to(new_game_move_path(@game, square_id: 0)) do %><i class="fa fa-square-o square fa-5x" id="sq1"></i><%end%>
+<%= link_to (new_game_move_path(@game, square_id: 1)) do %><i class="fa fa-square-o square fa-5x" id="sq2"></i><%end%>
+<%= link_to (new_game_move_path(@game, square_id: 2)) do %><i class="fa fa-square-o square fa-5x" id="sq3"></i><%end%>
+<%= link_to (new_game_move_path(@game, square_id: 3)) do %><i class="fa fa-square-o square fa-5x" id="sq4"></i><%end%>
+<%= link_to (new_game_move_path(@game, square_id: 4)) do %><i class="fa fa-square-o square fa-5x" id="sq5"></i><%end%>
+<%= link_to (new_game_move_path(@game, square_id: 5)) do %><i class="fa fa-square-o square fa-5x" id="sq6"></i><%end%>
+<%= link_to (new_game_move_path(@game, square_id: 6)) do %><i class="fa fa-square-o square fa-5x" id="sq7"></i><%end%>
+<%= link_to (new_game_move_path(@game, square_id: 7)) do %><i class="fa fa-square-o square fa-5x" id="sq8"></i><%end%>
+<%= link_to (new_game_move_path(@game, square_id: 8)) do %><i class="fa fa-square-o square fa-5x" id="sq9"></i><%end%>
 </div>
 
 
