got the xes and the os into the -move-. now to define wins and losses

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -20,7 +20,7 @@
   <%= @game.loser %>
 </p>
 
-
+<div class="element"></div>
 
 <div class="game_wrap" id="game_wrap">
 <%= link_to(new_game_move_path(@game, square_id: 0)) do %><i class="fa fa-square-o square fa-5x" id="sq1"></i><%end%>
