--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .game_wrap{
-  width:65%;
+  width:50%;
   margin-left: auto;
   margin-right: auto;
   font-size: 2.2rem;
@@ -18,18 +18,28 @@
   margin:2px;
 }*/
 
+
+
 .fa{  
   margin:0;
-  float:right;
+  float:left;
   padding:2px;
   vertical-align: center;
- display: inline-block;
- border-bottom:solid 3px black;
- padding-right: 7px;
- padding-left: 7px;
+  display: inline-block;
+  border-bottom:solid 3px black;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 #sq2, #sq5, #sq8 {
   border-right: solid 3px black;
   border-left: solid 3px black;
+}
+
+.fa{
+  background-color: none;
+}
+
+.fa:hover{
+  color:red;
 }
