--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -20,22 +20,34 @@
   <%= @game.loser %>
 </p>
 
-<div class="element"></div>
-
 <div class="game_wrap" id="game_wrap">
-<%= link_to(new_game_move_path(@game, square_id: 0)) do %><i class="fa fa-square-o square fa-5x" id="sq1"></i><%end%>
-<%= link_to (new_game_move_path(@game, square_id: 1)) do %><i class="fa fa-square-o square fa-5x" id="sq2"></i><%end%>
-<%= link_to (new_game_move_path(@game, square_id: 2)) do %><i class="fa fa-square-o square fa-5x" id="sq3"></i><%end%>
-<%= link_to (new_game_move_path(@game, square_id: 3)) do %><i class="fa fa-square-o square fa-5x" id="sq4"></i><%end%>
-<%= link_to (new_game_move_path(@game, square_id: 4)) do %><i class="fa fa-square-o square fa-5x" id="sq5"></i><%end%>
-<%= link_to (new_game_move_path(@game, square_id: 5)) do %><i class="fa fa-square-o square fa-5x" id="sq6"></i><%end%>
-<%= link_to (new_game_move_path(@game, square_id: 6)) do %><i class="fa fa-square-o square fa-5x" id="sq7"></i><%end%>
-<%= link_to (new_game_move_path(@game, square_id: 7)) do %><i class="fa fa-square-o square fa-5x" id="sq8"></i><%end%>
-<%= link_to (new_game_move_path(@game, square_id: 8)) do %><i class="fa fa-square-o square fa-5x" id="sq9"></i><%end%>
+
+<%= @board.each do |display| %>
+
+  <%if display == "X" %>
+    <span class="fa-stack fa-lg fa">
+      <i class="fa fa-square-o fa-stack-2x"></i>
+      <i class="fa fa-close fa-stack-1x"></i>
+    </span>
+
+  <% elsif display == "O" %>
+
+    <span class="fa-stack fa-lg fa">
+      <i class="fa fa-square-o fa-stack-2x"></i>
+      <i class="fa fa-circle-o fa-stack-1x"></i>
+    </span>
+
+  <% elsif display == nil %>
+
+  <%= link_to(new_game_move_path(@game, square_id: 0)) do %>
+    <i class="fa fa-square-o square fa-5x" id="sq1"></i>
+    <%end%>
+    
+  <% end %>
+
+<% end %>
+
 </div>
-
-
-
 
 <%= link_to 'Edit', edit_game_path(@game) %> |
 <%= link_to 'Back', games_path %>
