--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -25,20 +25,22 @@
 <% @board.each_with_index do |square_id, display| %>
 
 <%if square_id == "X" %>
-<span class="fa-stack fa-lg">
+<span class="fa-stack fa-2x fa-lg">
   <i class="fa fa-square-o fa-stack-2x"></i>
   <i class="fa fa-close fa-stack-1x"></i>
 </span>
 
 <% elsif square_id == "O" %>
 
-<span class="fa-stack fa-lg">
+<span class="fa-stack fa-2x fa-lg">
   <i class="fa fa-square-o fa-stack-2x"></i>
   <i class="fa fa-circle-o fa-stack-1x"></i>
 </span>
 
 <% elsif square_id == nil %>
-<%= link_to(new_game_move_path(@game, square_id: display)) do %><i class="fa fa-square-o square fa-5x"></i><%end%>
+<%= link_to(new_game_move_path(@game, square_id: display)) do %>
+<i class="fa fa-square-o square fa-4x"></i>
+<%end%>
 
 <% end %>
 <% end %>
