stopped at getting the computers turn. doing some css before I turn in

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <b>Winner:</b>
-  <%= @game.winner_name %>
+  <%= winning_user %>
 </p>
 
 <p>
   <b>Loser:</b>
-  <%= @game.loser %>
+  <%= losing_user %>
 </p>
 
 <div class="game_wrap" id="game_wrap">
