--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -30,5 +30,6 @@
 
 <br />
 
-<%= link_to 'New Game', new_game_path %>
-<%= link_to 'Users', users_path %>
+<%= link_to 'New Game', new_game_path %> |
+<%= link_to 'Users', users_path %> |
+
