--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,17 +2,12 @@
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>Email</th>
-    <th>Password digest</th>
+    <th>Users online!</th>
   </tr>
 
 <% @users.each do |user| %>
   <tr>
-    <td><%= user.name %></td>
-    <td><%= user.email %></td>
-    <td><%= user.password_digest %></td>
-    <td><%= link_to 'Show', user %></td>
+    <td><%= link_to user.name, user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
     <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
@@ -21,6 +16,6 @@
 
 <br />
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'Create a New User', new_user_path %> |
 
 <%= link_to 'Games', games_path %>
