--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,16 +6,6 @@
 </p>
 
 <p>
-  <b>Email:</b>
-  <%= @user.email %>
-</p>
-
-<p>
-  <b>Password digest:</b>
-  <%= @user.password_digest %>
-</p>
-
-<p>
   <b>Bio:</b>
   <%= @user.bio %>
 </p>
@@ -41,7 +31,9 @@
 </p>
 
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
+<% if current_user.id == @user.id %>
+<%= link_to 'Edit', edit_user_path(@user) %>|
+<% end %>
 <%= link_to 'Back', users_path %>
 
 
