new day. working on the computers turn

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,10 @@
  *= require_self
  *= require_tree .
  */
+
+ /* --- utilities ---
+ font-family: 'Lato', sans-serif;
+ font-family: 'Warnes', cursive;
+ font-family: 'Sacramento', cursive;
+ font-family: 'Medula One', cursive;
+ */
