--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -2,6 +2,38 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+*{
+ /* box-sizing:border-box;*/
+  font-family: 'Lato', sans-serif;
+}
+
+header .tic-tac{
+  font-family: 'Medula One', cursive;
+  font-size: 4em;
+}
+
+header .trill{
+  font-family: 'Sacramento', cursive;
+  font-size: 4em;
+}
+
+header .title{
+  margin-top: 120px;
+  text-align: center;
+  background-color: rgba(148, 161, 154, 0.5);
+}
+
+nav p{
+  display:inline-block;
+  width: 25%;
+  text-align: center;
+}
+
+h1{
+  font-family: 'Medula One', cursive;
+  font-size: 4em;
+}
+
 .game_wrap{
   width:500px;
   margin-left: auto;
