managed to revert to a working version, back to square one with the computers move

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -24,7 +24,7 @@
 <p>Play against the computer?</p>
   <div class="field">
     <%= f.label :against_the_computer %><br />
-    <%= f.check_box :player2_id, value: '1' %>
+    <%= f.check_box :draw %>
   </div>
 
   <div class="actions">
