Finished with carrierwave now

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= form_for (@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -37,7 +37,7 @@
 
   <div class="field about">
     <%= f.label :profile_picture %><br />
-    <%= f.text_field :profile_picture %>
+    <%= f.file_field :profile_picture.image_url(:thumb) %>
   </div>
 
   <div class="actions">
