--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,38 +2,39 @@
 
 <p>
   <b>Name:</b>
-  <%= @user.name %>
+  <%= @user.name %><br>
 </p>
 
 <p>
   <b>Bio:</b>
-  <%= @user.bio %>
+  <%= @user.bio %><br>
 </p>
 
 <p>
   <b>Wins:</b>
-  <%= @user.wins %>
+  <%= @user.wins %><br>
 </p>
 
 <p>
   <b>Losses:</b>
-  <%= @user.losses %>
+  <%= @user.losses %><br>
 </p>
 
 <p>
   <b>Draws:</b>
-  <%= @user.draws %>
+  <%= @user.draws %><br>
 </p>
 
 <p>
   <b>Profile picture:</b>
-  <%= @user.profile_picture %>
+  <%= image_tag @user.profile_picture_url.thumb %>
 </p>
 
-
+<% if current_user %>
 <% if current_user.id == @user.id %>
 <%= link_to 'Edit', edit_user_path(@user) %>|
 <% end %>
 <%= link_to 'Back', users_path %>
+<% end %>
 
 
