--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
 
 <p>
   <b>Profile picture:</b>
-  <%= image_tag @user.profile_picture_url.thumb %>
+  <%= image_tag @user.profile_picture_url %>
 </p>
 
 <% if current_user %>
