--- a/app/views/games/result.html.erb
+++ b/app/views/games/result.html.erb
@@ -1,21 +1,23 @@
 
 <h1>Something</h1>
 
-<%= @game.result do |x| %>
+<% if @game.result == 1 %>
 
-<% if x.result == "1" %>
-
-<h1>Player 1 Wins</h1>
+<h2><%= @game.player1.name%> wins this game!</h2><br>
+<h2><%= @game.player2.name%>, you need to work on your game.</h2><br>
+<h2>Stay trill.</h2>
 
 <% elsif x.result == "2" %>
 
-<h2>Player 2 Wins</h2>
+<h2><%= @game.player2.name%> wins this game!</h2><br>
+<h2><%= @game.player1.name%>, you need to work on your game.</h2><br>
+<h2>Stay trill.</h2>
 
 <% else x.result == "0" %>
 
-<h2>It is a DRAW</h2>
+<h2><%= @game.player2.name%>, <%= @game.player1.name%>, thats a DRAW.</h2><br>
+<h2>Stay trill.</h2>
 
-<% end %>
 <% end %>
 
 <br><%= link_to 'Games', games_path %>
