--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -18,7 +18,7 @@ header .tic-tac{
 
 header .trill{
   font-family: 'Sacramento', cursive;
-  font-size: 4em;
+  font-size: 4.5em;
   color:rgba(255, 108, 0, 1.0);
   -webkit-transition: text-shadow 0.2s linear;
 }
@@ -33,6 +33,7 @@ header .title{
   height:150px;
   vertical-align: bottom;
   padding-top:105px;
+  border-bottom: solid 2px rgba(255, 108, 0, 1.0);
 } 
 
 header a{
@@ -132,13 +133,18 @@ a:hover{
   color:rgba(255, 108, 0, 1.0);
 }
 
+tr th h2{
+  text-align: left;
+}
+
+td, th{
+  text-align: left;
+  padding:10px 10px 10px 0;
+}
+
 td a{
   font-size: 1.5em;
   padding: 2% 10% 2% 5%;
-}
-
-tr th h2{
-  text-align: left
 }
 
 .fa-asterisk{
@@ -153,9 +159,9 @@ input{
 }
 
 textarea{
-border-radius: 20px;
-border:1px solid rgba(255, 157, 73, 1.0);
-padding:5px;
+  border-radius: 20px;
+  border:1px solid rgba(255, 157, 73, 1.0);
+  padding:5px;
 }
 
 #user_profile_picture input{
@@ -175,18 +181,35 @@ img.mini{
   border:2px solid rgba(255, 157, 73, 1.0);
 }
 
+img.maxi{
+  border-radius:30px;
+  height:300px;
+  border:2px solid rgba(255, 157, 73, 1.0);
+  display:  inline-block;
+}
+
+.show_users{
+  width:300px;
+}
+
+.users_wrap{
+  margin-bottom:50px;
+  margin-top: 50px;
+  height:400px;
+}
+
 .user_box{
   width:80%;
   margin-right: auto;
   margin-left:auto;
   text-align: center;
-} 
+}
 
 .user_link{
   width:100%;
   margin-right: auto;
   margin-left:auto;
-  margin-bottom: 10%;
+  margin-bottom: 50px;
   text-align: center;
 }
 
