--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,27 @@
+<div class="users_wrap">
+  <p class="show_users">
+    <%= image_tag @user.profile_picture_url, class: "maxi" %>
+  </p>
 
+  <p class="show_users">
+    <h2>Name:</h2>
+      <%= @user.name %><br><br>
+    <h2>Bio:</h2>
+      <%= @user.bio %><br>
+  </p>
+</div>
 
-<p>
-  <b>Name:</b>
-  <%= @user.name %><br>
-</p>
+<p id="notice"><%= notice %></p><br>
 
-<p>
-  <b>Bio:</b>
-  <%= @user.bio %><br>
-</p>
-
-<p>
-  <b>Profile picture:</b>
-  <%= image_tag @user.profile_picture_url %>
-</p>
-
-<p id="notice"><%= notice %></p>
+<%= link_to 'Users', users_path %> | 
+<%= link_to 'Games', games_path %> |
 <% if current_user %>
 <% if current_user.id == @user.id %>
-<%= link_to 'Edit', edit_user_path(@user) %>|
+<%= link_to 'Edit', edit_user_path(@user) %> |
 <% end %>
 <%= link_to 'Back', users_path %>
 <% end %>
+
+
 
 
