last commit before presentation. all seems to be ok!

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -12,7 +12,7 @@
     <td><%= game.id %></td>
     <td><%= game.player1.name %></td>
     <td><%= game.player2.name %></td>
-    <td><%= link_to 'Show', game %></td> 
+    <td><%= link_to 'Show Result', game %></td> 
     <td>|</td> 
     <td><%= link_to 'Edit', edit_game_path(game) %></td>
     <td>|</td>
