--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Previous Games</h1>
+<h1>Previous Tic Tac Trill Games</h1>
 
 <table>
   <tr>
@@ -24,5 +24,10 @@
 <br />
 
 <%= link_to 'New Game', new_game_path %> |
-<%= link_to 'Users', users_path %> |
+<%= link_to 'Users', users_path %>
+
+<h1>Bonus Trill Pong</h1>
+
+<%= link_to 'Trill Pong', trillpong_index_path %>
+
 
