--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Lato|Warnes|Sacramento|Medula+One|Press+Start+2P' rel='stylesheet' type='text/css'>
-  <script type="text/javascript" src="pong.js"></script>
+  <script type="text/javascript" src="trillpong.js"></script>
 </head>
 
 <header>
